fix: rename PlayAudioButton, delete truncate from button-rectangular

--- a/frontend/src/styles/components.css
+++ b/frontend/src/styles/components.css
@@ -6,7 +6,7 @@
   }
 
   .button-color {
-    @apply cursor-pointer truncate;
+    @apply cursor-pointer;
     @apply bg-button-light border-button-light;
     @apply dark:bg-button-dark dark:border-button-dark;
     @apply hover:brightness-103 hover:saturate-98 dark:hover:brightness-112;
